--- a/Week02/holygrail.html
+++ b/Week02/holygrail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juliet Frimpomaah | Holy Grail Layout Example</title>
-    <meta name="discription" content="A common layout on the web called the 'Holy Grail' ">
+    <meta name="description" content="A common layout on the web called the 'Holy Grail' ">
     <meta name="author" content="Juliet Frimpomaah">
 </head>
 <body>
