--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Juliet Frimpomaah | WDD 130</title>
-        <meta name="description" content="Juliet Frimpomaah, WDD 130, Course Home Page ">
+        <meta name="description" content="Juliet Frimpomaah's BYU-Idaho WDD 130 Course Home Page ">
         <meta name="author" content="Juliet Frimpomaah">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
