Names changes and correct linking of pages and images.

--- a/whitewater-rafting-website/contact.html
+++ b/whitewater-rafting-website/contact.html
@@ -23,7 +23,7 @@
         <h1>Contact Us</h1>
         <p>We'd love to hear from you! If you have any questions or would like to book a trip, feel free to reach out.</p>
 
-        <!-- Contact Form -->
+        
         <form action="submit_form.php" method="POST">
             <label for="name">Your Name</label>
             <input type="text" id="name" name="name" required>
@@ -38,7 +38,7 @@
         </form>
 
         <h2>Contact Details</h2>
-        <p><strong>Email:</strong> info@whitewaterghana.com</p>
+        <p><strong>Email:</strong> whitewaterghana@gmail.com</p>
         <p><strong>Phone:</strong> +233 541 149 7889</p>
         <p><strong>Address:</strong> 123 Adventure Street, Accra, Ghana</p>
 
