--- a/whitewater-rafting-website/index.html
+++ b/whitewater-rafting-website/index.html
@@ -7,7 +7,7 @@
         <title>Whitewater Rafting Ghana</title>
         <meta name="description" content="Experience thrilling whitewater rafting adventures in the heart of Ghana.">
         <meta name="author" content="Whitewater Rafting Ghana">
-        <link rel="stylesheet" href="raftingstyles.css"> <!-- Link to your CSS -->
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
 
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
         </header>
-
+        
         <main>
             <section id="hero">
                 <h1>Experience the Thrill of Whitewater Rafting in Ghana!</h1>
@@ -43,9 +43,9 @@
             
             <aside class="box">
                 <h2>Featured River: The White Volta</h2>
-                <img src="c:\Users\admin\OneDrive\Pictures\images_white-volta.jpg" alt="Rafting on the White Volta River" width="300">
+                <img src="images/rafting.jpg" alt="Rafting on the White Volta River" width="800">
                 <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids. Perfect for both seasoned rafters and beginners!</p>
-                <a href="trips.html#white-volta" class="cta-button">Learn More</a>
+                <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
 
             <section id="social-links">
