--- a/whitewater-rafting-website/about.html
+++ b/whitewater-rafting-website/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Us - Whitewater Rafting Ghana</title>
-    <link rel="stylesheet" href="raftingstyles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -24,18 +24,18 @@
         <p>At Whitewater Rafting Ghana, we are passionate about providing exhilarating whitewater rafting adventures in the heart of Ghana. Our mission is to offer an unforgettable experience, where safety and fun come together in a beautiful natural setting.</p>
 
         <h2>Our Story</h2>
-        <p>Founded in 2010, Whitewater Rafting Ghana was created to bring the thrill of rafting to adventurers worldwide. With a deep commitment to safety, environmental conservation, and exceptional customer service, we are proud to be the go-to rafting company in Ghana.</p>
+        <p>Founded in 2024, Whitewater Rafting Ghana was created to bring the thrill of rafting to adventurers worldwide. With a deep commitment to safety, environmental conservation, and exceptional customer service, we are proud to be the go-to rafting company in Ghana.</p>
 
         <h2>Meet the Team</h2>
         <div class="team">
             <div class="team-member">
-                <img src="team-member1.jpg" alt="John Oppong" />
-                <h3>John Doe</h3>
-                <p>Founder & Head Guide - John has over 15 years of experience in whitewater rafting and is passionate about giving guests the safest and most exciting adventure.</p>
+                <img src="images/team2.jpg" alt="John Oppong" />
+                <h3>John Oppong</h3>
+                <p>Founder & Head Guide - John has over 5 years of experience in whitewater rafting and is passionate about giving guests the safest and most exciting adventure.</p>
             </div>
             <div class="team-member">
-                <img src="team-member2.jpg" alt="Jane Oppong" />
-                <h3>Jane Doe</h3>
+                <img src="images/Team.jpg" alt="Jane Oppong" />
+                <h3>Jane Oppong</h3>
                 <p>Operations Manager - With a background in hospitality management, Jane ensures everything runs smoothly from booking to the rafting experience.</p>
             </div>
         </div>
@@ -45,7 +45,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Whitewater Rafting Ghana</p>
+        <p> 2024 Whitewater Rafting Ghana</p>
     </footer>
 </body>
 </html>
