--- a/whitewater-rafting-website/index.html
+++ b/whitewater-rafting-website/index.html
@@ -44,6 +44,7 @@
             <aside class="box">
                 <h2>Featured River: The White Volta</h2>
                 <img src="images/rafting.jpg" alt="Rafting on the White Volta River" width="800">
+                <img src="images/rafting4.jpg" alt="Rafting on the White Volta River" width="800">
                 <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids. Perfect for both seasoned rafters and beginners!</p>
                 <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
