Put in the proper meta description content and title

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> About Us</title>
-    <meta name="description" content="At Whitewater Rafting Ghana, we believe that the best adventures are the ones shared with great company, thrilling experiences, and unforgettable memories. Our team is dedicated to ensuring your journey down the rapids is not just an adventure, but a safe, fun, and exhilarating escape into nature. We value every moment with our guests, delivering exceptional service and ensuring your safety while you enjoy the rush of white-water excitement. Whether you’re a seasoned pro or a first-time adventurer, we’re here to guide you through an unforgettable experience that will leave you smiling long after you’ve reached the shore. Join us and let’s make memories together, one rapid at a time. ">
+    <meta http-equiv="X-UA-Compatible" content="About Us">
+    <title>Whitewater Rafting in the Volta River - Ghana</title>
+    <meta name="description" content="Experience thrilling white-water rafting adventures with [Company Name]. We offer guided tours through scenic rapids, ensuring fun, safety, and unforgettable memories for all adventurers. Book your adventure today!">
     <meta name="author" content="Juliet Frimpomaah">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,13 +23,12 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <p>
+                
                     <a href="http://jigsaw.w3.org/css-validator/check/referer">
                         <img style="border:0;width:88px;height:31px"
                             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                            alt="Valid CSS!" />
+                            alt="Valid CSS!">
                         </a>
-                    </p>
             </ul>
         </nav>
     </header>
@@ -86,7 +85,7 @@
                 <h2>Adventures Awaits You!</h2>
         <div class="figure_flex">
            <figure>
-                <img src='images/rapids14.jpg' alt="Rafting dventures1" width="250" />
+                <img src='images/rapids14.jpg' alt="Rafting dventures1" width="250">
                 <figcaption>Volta River</figcaption>
             </figure>
         <figure>
