--- a/wwr/index.html
+++ b/wwr/index.html
@@ -43,8 +43,8 @@
             
             <aside class="box">
                 <h2>Featured River: The White Volta</h2>
-                <img src="images/rafting.jpg" alt="Rafting on the White Volta River">
-                <img src="images/rafting4.jpg" alt="Rafting on the White Volta River">
+                <img src="images/rapids13.jpg" alt="Rafting on the White Volta River">
+                <img src="images/rapids0.jpg" alt="Rafting on the White Volta River">
                 <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids. Perfect for both seasoned rafters and beginners!</p>
                 <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
