Removed the a element and placed it in the nav attribute.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="About Us">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Whitewater Rafting in the Volta River - Ghana</title>
     <meta name="description" content="Experience thrilling white-water rafting adventures with [Company Name]. We offer guided tours through scenic rapids, ensuring fun, safety, and unforgettable memories for all adventurers. Book your adventure today!">
     <meta name="author" content="Juliet Frimpomaah">
@@ -18,17 +18,17 @@
     <header>
         <img src="images/dryoarlogo.png" alt="Whitewater Rafting Ghana Logo">
         <nav>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!">
+                </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 
-                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                        <img style="border:0;width:88px;height:31px"
-                            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                            alt="Valid CSS!">
-                        </a>
             </ul>
         </nav>
     </header>
@@ -51,9 +51,9 @@
                     is always better with the right company.</p>
 
                     <img src="images/rapids4.jpg" alt="hero article content image">
-
             </article>
         </div>
+        
         <div class="history">
             <section>
                 <h2>History</h2>
