--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Whitewater Rafting in the Volta River - Ghana</title>
-    <meta name="description" content="Experience thrilling white-water rafting adventures with [Company Name]. We offer guided tours through scenic rapids, ensuring fun, safety, and unforgettable memories for all adventurers. Book your adventure today!">
+    <title>Rafting Tours & River Adventures | Whitewater Rafting Ghana – Safe, Fun, and Memorable</title>
+    <meta name="description" content="Experience thrilling white-water rafting adventures with Whitewater Rafting Ghana. We offer guided tours through scenic rapids, ensuring fun, safety, and unforgettable memories for all adventurers. Book your adventure today!">
     <meta name="author" content="Juliet Frimpomaah">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
