Added to Meta Tittle

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Rafting Tours & River Adventures | Whitewater Rafting Ghana – Safe, Fun, and Memorable</title>
+    <title>Rafting Tours & River Adventures | Whitewater Rafting Ghana – About Us</title>
     <meta name="description" content="Experience thrilling white-water rafting adventures with Whitewater Rafting Ghana. We offer guided tours through scenic rapids, ensuring fun, safety, and unforgettable memories for all adventurers. Book your adventure today!">
     <meta name="author" content="Juliet Frimpomaah">
     <link rel="preconnect" href="https://fonts.googleapis.com">
