--- a/whitewater-rafting-website/contact.html
+++ b/whitewater-rafting-website/contact.html
@@ -43,8 +43,8 @@
         <p><strong>Address:</strong> 123 Adventure Street, Accra, Ghana</p>
 
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=YOUR_GOOGLE_MAP_URL" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159032.95311417162!2d-0.3475968582916259!3d5.60371600262572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdfd913434334d7%3A0x5c7a4a3f587dd5!2sAccra%2C+Ghana!5e0!3m2!1sen!2sus!4v1587381237086!5m2!1sen!2sus" width="600" height="450" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
 
         <h2>Follow Us</h2>
         <p>Stay connected through our social media:</p>
