--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,7 +77,7 @@
                     <figcaption>Philemon Akpaloo | Senior Rafting Guide</figcaption>
                 </figure>
         </div>
-        </div>
+        
         </section>
         <section>
 
@@ -101,7 +101,7 @@
                     <textarea id="message" name="message" rows="4" required placeholder="Enter your message"></textarea><br><br>
                     <input type="checkbox" id="newsletter" name="newsletter">
                     <label for="newsletter">Please subscribe me to the monthly newsletter</label><br><br>
-                    <button type="Finish">Finish</button>
+                    <button type="Submit">Submit</button>
                 </form>
                
             <h5>Follow Us</h5>
