Added a picture in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -58,6 +58,7 @@
                 <h2>Featured River: The White Volta</h2>
                 <img src="images/rapids13.jpg" alt="Rafting on the White Volta River">
                 <img src='images/trips6.jpg' alt='Tano trip' width="400">
+                <img src='images/trips7.jpg' alt='Prah trip' width="400">
                 
                 <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids. Perfect for both seasoned rafters and beginners!</p>
                 <a href="trips.html" class="cta-button">Learn More</a>
@@ -66,7 +67,7 @@
             <section id="social-links">
                 <h2>Connect with Us</h2>
                 <p>Follow us on social media for the latest updates and offers:</p>
-                <ul>
+                
             <footer>       
                     <p>&copy; | 2024 Whitewater Rafting Ghana | Juliet Frimpomaah</p>
                     <div class="social-icons">
