--- a/wwr/index.html
+++ b/wwr/index.html
@@ -43,14 +43,16 @@
 
             <section id="about">
                 <h2>About Us</h2>
-                <p>We offer thrilling rafting experiences on some of the most scenic rivers in Ghana. Join us for an unforgettable adventure!</p>
+                <p>We offer thrilling rafting experiences on some of the most scenic rivers in Ghana. 
+                    Join us for an unforgettable adventure!</p>
                 <a href="about.html" class="cta-button">Learn More</a>
             </section>
 
             <section id="featured-trips">
                 <h2>Featured Trips</h2>
                 <img src="images/rapids0.jpg" alt="Rafting on the White Volta River">
-                <p>Explore our different rafting trips, from serene floats to adrenaline-pumping rapids. Each trip offers a unique adventure in Ghana's stunning natural landscapes.</p>
+                <p>Explore our different rafting trips, from serene floats to adrenaline-pumping rapids.</p> 
+                <p>Each trip offers a unique adventure in Ghana's stunning natural landscapes.</p>
                 <a href="trips.html" class="cta-button">View All Trips</a>
             </section>
             
@@ -60,7 +62,8 @@
                 <img src='images/trips6.jpg' alt='Tano trip' width="400">
                 <img src='images/trips7.jpg' alt='Prah trip' width="400">
                 
-                <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids. Perfect for both seasoned rafters and beginners!</p>
+                <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids.</p> 
+                <p>Perfect for both seasoned rafters and beginners!</p>
                 <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
 
