--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -108,7 +108,7 @@
                     placeholder="Enter your message"></textarea><br><br>
                 <input type="checkbox" id="newsletter" name="newsletter">
                 <label for="newsletter">Please subscribe me to the monthly newsletter</label><br><br>
-                <button type="Submit"> Send Your Inquiry </button>
+                <button type="proceed"> Send Your Inquiry </button>
             </form>
         </section>
         <section>
