--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,10 +29,10 @@
       
         </header>
         
-        <main>
+    <main>
             <main class="home">
             <section id="hero">
-                <img src="images/river-wide3.jpg">
+                <img src="images/river-wide3.jpg" alt="Background Image">
             <h1>Experience the Thrill of Whitewater Rafting in Ghana!</h1>
             <p>Your adventure awaits in the heart of nature. Book your trip today.</p>
                 <a href="trips.html" class="cta-button">Book a Trip</a>
@@ -64,7 +64,7 @@
                 <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
 
-            <h5>Subscribe to the Monthly Newsletter</h5>
+            <h5>Please Subscribe to the Monthly Newsletter</h5>
             <form action="#" method="post">
                 <label for="name">Your Name:</label><br>
                 <input type="text" id="name" name="name" required placeholder="Enter your name"><br><br>
@@ -76,8 +76,8 @@
             <section id="social-links">
                 <h6>Connect with Us</h6>
                 <p>Follow us on social media for the latest updates and offers:</p>
-
-        </main>   
+            </section>
+    </main>   
         <footer>       
                     <p>&copy; | 2024 Whitewater Rafting Ghana | Juliet Frimpomaah</p>
                     <div class="social-icons">
