Made changes to the trips and home page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,9 +32,12 @@
     <main>
             <main class="home">
             <section id="hero">
-                <img src="images/river-wide3.jpg" alt="Background Image">
+                <!-- <img src="images/river-wide3.jpg" alt="Background Image"> -->
             <h1>Experience the Thrill of Whitewater Rafting in Ghana!</h1>
             <p>Your adventure awaits in the heart of nature. Book your trip today.</p>
+            <img src="images/river-wide3.jpg" alt="Background Image">
+            <!-- <img src='images/trips6.jpg' alt="Background Image"> -->
+
                 <a href="trips.html" class="cta-button">Book a Trip</a>
             </section>
 
@@ -47,23 +50,28 @@
 
             <section id="featured-trips">
                 <h3>Featured Trips</h3>
-                <img src="images/rapids0.jpg" alt="Rafting on the White Volta River">
+                <!-- <img src="images/rapids0.jpg" alt="Rafting on the White Volta River"> -->
                 <p>Explore our different rafting trips, from serene floats to adrenaline-pumping rapids.</p> 
                 <p>Each trip offers a unique adventure in Ghana's stunning natural landscapes.</p>
+                <img src="images/rapids0.jpg" alt="Rafting on the White Volta River">
+                <!-- <img src='images/trips6.jpg' alt='Tano trip'> -->
                 <a href="trips.html" class="cta-button">View All Trips</a>
             </section>
 
                 <h4>Featured River: The White Volta</h4>
+                <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids.</p> 
+                <p>Perfect for both seasoned rafters and beginners!</p>
             <aside class="box">
                 <img src="images/rapids13.jpg" alt="Rafting on the White Volta River">
                 <img src='images/trips6.jpg' alt='Tano trip' width="400">
                 <img src='images/trips7.jpg' alt='Prah trip' width="400">
                 
-                <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids.</p> 
-                <p>Perfect for both seasoned rafters and beginners!</p>
+                <!-- <p>The White Volta River offers one of the most exhilarating rafting experiences in Ghana, with stunning landscapes and thrilling rapids.</p>  -->
+                <!-- <p>Perfect for both seasoned rafters and beginners!</p> -->
                 <a href="trips.html" class="cta-button">Learn More</a>
             </aside>
-
+            
+            <section id="newsletter">
             <h5>Please Subscribe to the Monthly Newsletter</h5>
             <form action="#" method="post">
                 <label for="name">Your Name:</label><br>
@@ -72,7 +80,7 @@
                 <input type="email" id="email" name="email" required placeholder="Enter your email address"><br><br>
                 <button type="Submit"> Subscribe </button>
             </form>
-
+            </section>
             <section id="social-links">
                 <h6>Connect with Us</h6>
                 <p>Follow us on social media for the latest updates and offers:</p>
