Made a few changes

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,11 +30,11 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="Contact">
+<main>
+        <!-- <section id="Contact"> -->
             <!-- <div class="hero"> -->
             <!-- </div> -->
-            <main class="home">
+            <!-- <main class="home"> -->
                 <section id="hero">
                 <!-- <div class="figure_flex"> -->
                     <h1>Contact Us | Whitewater Rafting Ghana | Juliet Frimpomaah</h1>
@@ -47,7 +47,7 @@
                 <div class="flex-map">
 
                 </div>
-                    <section>
+                    <!-- <section> -->
                         <section class="contact-section">
                             <div class="contact-info">
 
@@ -70,9 +70,9 @@
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159032.95311417162!2d-0.3475968582916259!3d5.60371600262572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdfd913434334d7%3A0x5c7a4a3f587dd5!2sAccra%2C+Ghana!5e0!3m2!1sen!2sus!4v1587381237086!5m2!1sen!2sus"
                                 width="450"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                        </div>
-                    </div>
-                    </section>
+           </div>
+           </div>
+        </section>
             
         <section>
             <h4 class="prof">Meet Our Team</h4>
@@ -102,12 +102,12 @@
         </section>
         <section class="questions">
 
-            <h2>Have Questions? Contact Us!</h2>
+            <h5>Have Questions? Contact Us!</h5>
         </section>
             <!-- <p>We'd love to hear from you!</p>  -->
             <!-- <p>If you have any questions or would like to book a trip, feel free to reach out.</p> -->
         <section class="contact-form">
-                <h3 class="section-subtitle">Contact Form</h3>
+                <h6 class="section-subtitle">Contact Form</h6>
                 <form action="#" method="post" class="form">
                     <label for="name" class="form-label">Name:</label>
                     <input type="text" id="name" name="name" required="" class="form-input">
@@ -132,11 +132,11 @@
             </section>
         <section>
             
-            <h6 class="Follow">Follow Us</h6>
+            <h7 class="Follow">Follow Us</h7>
             <p>Stay connected through our social media:</p>
         </section>
 
-    </main>
+</main>
     <footer>
 
         <a href="https://app.moqups.com/3sF4rQoepz6NT2aWac9BuA3kZVtglpsm/view/page/ad12de680?ui=0&fit_width=1"></a>
