Minor changes made

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -130,11 +130,11 @@
                     <button type="submit" class="form-button">Send Your Inquiry</button>
                 </form>
             </section>
-        <section>
+        <!-- <section> -->
             
-            <h7 class="Follow">Follow Us</h7>
+            <h6 class="Follow">Follow Us</h6>
             <p>Stay connected through our social media:</p>
-        </section>
+        <!-- </section> -->
 
 </main>
     <footer>
